--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                             style="text-decoration: none;">Contact
                             Me</a></button>
                     <button type="button" class="btn  btn-lg px-4 me-md-2 custom-btn btn-5"><a
-                            href="https://www.linkedin.com/in/gajanan-deshmukh-0771a5250/" target="_blank"
+                            href="https://www.linkedin.com/in/gajanan-deshmukh-0771a5250/recent-activity/all/" target="_blank"
                             style="text-decoration: none;">Linkedin</a></button>
                 </div data-aos="fade-in-up" data-aos-duration="1500">
             </div>
@@ -187,7 +187,7 @@
                         ◾<b> Data Processing:</b> Handling and transforming large datasets for analysis or application use.<br>
                     </p><br>
                     <p style="text-align: justify;">
-                        <b>- Academic Achievement:</b>
+                        <b> - Academic Achievement:</b>
                         During my academic journey, I consistently excelled, maintaining an A+ grade throughout
                         my BCS program. This achievement underscores my commitment to academic rigor and
                         excellence.
@@ -199,7 +199,7 @@
                         and skill development.
                     </p><br>
                     <p style="text-align: justify;">
-                        <b>-Adaptability & Problem-Solving:</b>
+                        <b>- Adaptability & Problem-Solving:</b>
                         My ability to adapt to new challenges and my penchant for solving complex problems
                         enable me to thrive in dynamic environments. I approach each project with a blend of
                         critical thinking, creativity, and meticulous attention to detail.
@@ -231,7 +231,7 @@
                             <ul class="social-network social-circle">
                                 <li><a href="https://github.com/Gajanand1219" class="icogithub" title="GITHUB"><i
                                             class="fa-brands fa-github"></i></a></li>
-                                <li><a href="https://www.linkedin.com/in/gajanan-deshmukh-0771a5250/" class="icoLinkedin"
+                                <li><a href="https://www.linkedin.com/in/gajanan-deshmukh-0771a5250/recent-activity/all/" class="icoLinkedin"
                                         title="Linkedin"><i class="fa-brands fa-linkedin"></i></a>
                                 </li>
                                 <li><a href="mailto:gajanan19022000@gmail.com" class="icoTwitter" title="Twitter"><i
@@ -257,16 +257,20 @@
             <div class="row">
                 <div class="col-sm-6 col-md-3">
                     <div class="count-area-content" data-aos="fade-in-left" data-aos-duration="1500">
+                        <a href="https://github.com/Gajanand1219">
                         <div class="count-icon"> <i class="fa fa-laptop fa-2x stats-icon"></i></div>
                         <div class="count-title">10+</div>
                         <div class="count-title">Projects</div>
+                        </a>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-3">
                     <div class="count-area-content" data-aos="fade-in-left" data-aos-duration="1500">
+                        <a href="https://learn.microsoft.com/en-us/users/me/achievements#trophies-section">
                         <div class="count-icon"> <i class="fa fa-trophy fa-2x stats-icon"></i></div>
-                        <div class="count-title">5+</div>
+                        <div class="count-title"> 25+</div>
                         <div class="count-title">Achievements</div>
+                        </a>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-3">
@@ -278,9 +282,11 @@
                 </div>
                 <div class="col-sm-6 col-md-3">
                     <div class="count-area-content" data-aos="fade-in-right" data-aos-duration="1500">
+                        <a href="#contact-s" style=" text-decoration: none;">
                         <div class="count-icon"> <i class="fa fa-support fa-2x stats-icon"></i></div>
                         <div class="count-title"> 24/7 </div>
                         <div class="count-title"> Support </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -811,7 +817,7 @@
                     <div class="p-2 w-full pt-8 mt-8 border-t border-violet-200 text-center">
                         <p class="leading-normal my-5"> <a href="https://github.com/Gajanand1219"
                                 style="  text-decoration: none;"> © Copyright Gaganand1219 All Rights Reserved </a>. <br>
-                             <a href="https://gajanand1219.github.io/portfolio/
+                             <a href="https://gajanand1219.github.io/portfolio/"
                                 style="  text-decoration: none;">Deshmukh Gajanan Designed & Developed by</a>
                         </p>
                         <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-2 mt-4">
